# ray-tracer

./: .clang-format  .gitignore  .gitmodules  CMakeConfigureGNU  CMakeConfigureLLVM  CMakeLists.txt  README  README.org  TODO.org
assets/: CMakeLists.txt
assets/textures/: CMakeLists.txt  convert_cp_textures.sh
assets/textures/skybox/chapel/: readme.txt
cmake/: BuildExecutablesFunctions.cmake  BuildTestFunctions.cmake  ConfigureGNU.cmake  ConfigureGNUForDarwin.cmake  ConfigureGNUForLinux.cmake  ConfigureLLVM.cmake  ConfigureLLVMForDarwin.cmake  ConfigureLLVMForLinux.cmake
common/: CMakeLists.txt
common/include/: assert_utils.h  benchmark.hpp  logging.h  string_utils.hpp
src/: CMakeBuildTestFunctions  CMakeLists.txt  align_check_pattern.hpp  badge.hpp  binary_pattern.hpp  blended_pattern.hpp  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  canvas_ppm_reader.cpp  canvas_ppm_writer.cpp  checkers_pattern.hpp  clock_dial_matxforms_main.cpp  color.cpp  color.hpp  color_pallette.hpp  cone.cpp  cone.hpp  constants.hpp  csg.cpp  csg.hpp  cube.cpp  cube.hpp  cube_map_texture.cpp  cube_map_texture.hpp  cylinder.cpp  cylinder.hpp  execution_profiler.hpp  gradient_pattern.hpp  gradient_perlin_noise_pattern.hpp  gradient_ring_pattern.hpp  group.cpp  group.hpp  intersection_info.cpp  intersection_info.hpp  intersection_record.cpp  intersection_record.hpp  material.cpp  material.hpp  (+88 more)
src/common/: CMakeLists.txt
src/common/include/: benchmark.hpp  logging.h
src/executables/: CMakeBuildExecutablesFunctions  CMakeLists.txt  fibonacci.cpp  hello_world.cpp  render_align_check_plane.cpp  render_all_images.sh  render_cessna.cpp  render_checkered_cubes.cpp  render_chess_pawn.cpp  render_clock_dial.cpp  render_cone_scene.cpp  render_csg_dice.cpp  render_cube_light_scene.cpp  render_cube_scene.cpp  render_cylinder_scene.cpp  render_cylinder_texture_scene.cpp  render_dragons.cpp  render_hexagon_scene.cpp  render_nasa_blue_earth.cpp  render_nested_glass_spheres.cpp  render_newtons_cradle.cpp  render_phong_sphere.cpp  render_skybox.cpp  render_skybox_movie.cpp  render_sphere_silhouette.cpp  render_spheres_with_decorations.cpp  render_teapot.cpp  render_textures.cpp  render_virtual_cannon.cpp  render_with_patterns.cpp  render_with_plane.cpp  render_with_reflections.cpp  render_with_t3r.cpp  render_with_textures.cpp  render_world_main.cpp  update_generated_images.sh
src/file_utils/: CMakeLists.txt  mmapped_file_reader.cpp  mmapped_file_reader.hpp
src/io/: CMakeLists.txt  camera.cpp  camera.hpp  camera_render.cpp  canvas.cpp  canvas.hpp  canvas_ppm_reader.cpp  canvas_ppm_writer.cpp  canvas_rendering.cpp  multi_threaded_renderer.cpp  multi_threaded_work_generator.cpp  multi_threaded_work_generator.hpp  obj_file_loader.cpp  obj_file_loader.hpp  obj_parse_result.cpp  obj_parse_result.hpp  phong_illumination.cpp  phong_illumination.hpp  raytracer_renderer.hpp  render_params.cpp  render_params.hpp  single_threaded_renderer.cpp  wavefront-obj-file-format-notes.org  world.cpp  world.hpp  xcb_display.cpp  xcb_display.hpp
src/io/tests/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  obj_file_parser_test.cpp  phong_illumination_test.cpp  world_test.cpp
src/patterns/: CMakeLists.txt  align_check_pattern.hpp  binary_pattern.hpp  blended_pattern.hpp  checkers_pattern.hpp  cube_map_texture.cpp  cube_map_texture.hpp  gradient_pattern.hpp  gradient_perlin_noise_pattern.hpp  gradient_ring_pattern.hpp  material.cpp  material.hpp  pattern_interface.cpp  pattern_interface.hpp  perlin_noise.hpp  perlin_noise_pattern.hpp  ring_pattern.hpp  solid_pattern.hpp  stock_materials.cpp  stock_materials.hpp  striped_pattern.hpp  texture_2d_pattern.hpp  uv_checkers.hpp  uv_cube_map.hpp  uv_image_pattern.hpp  uv_mapper.cpp  uv_mapper.hpp  uv_noise_texture.hpp  uv_pattern_interface.hpp
src/patterns/tests/: CMakeLists.txt  pattern_test.cpp  reflection_refraction_test.cpp  uv_pattern_test.cpp
src/platform_utils/: CMakeLists.txt  mmapped_file_reader.hpp  mmapped_file_reader_darwin.cpp  mmapped_file_reader_linux.cpp  thread_utils.hpp  thread_utils_darwin.cpp  thread_utils_linux.cpp
src/primitives/: CMakeLists.txt  color.cpp  color.hpp  color_pallette.hpp  intersection_info.cpp  intersection_info.hpp  intersection_record.cpp  intersection_record.hpp  matrix.cpp  matrix.hpp  matrix_transformations.cpp  matrix_transformations.hpp  point_light.cpp  point_light.hpp  ray.cpp  ray.hpp  tuple.cpp  tuple.hpp  uv_point.cpp  uv_point.hpp
src/primitives/tests/: CMakeLists.txt  color_test.cpp  matrix_test.cpp  matrix_transformations_test.cpp  point_light_test.cpp  ray_test.cpp  ray_transform_test.cpp  tuple_test.cpp
src/shapes/: CMakeLists.txt  aabb.cpp  aabb.hpp  cone.cpp  cone.hpp  csg.cpp  csg.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  group.cpp  group.hpp  plane.cpp  plane.hpp  shape_interface.cpp  shape_interface.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/shapes/tests/: CMakeLists.txt  aabb_test.cpp  cone_test.cpp  csg_test.cpp  cube_test.cpp  cylinder_test.cpp  group_test.cpp  plane_test.cpp  sphere_test.cpp  sphere_transform_test.cpp  triangle_test.cpp
src/utils/: CMakeLists.txt  badge.hpp  constants.hpp  utils.hpp
test/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  color_test.cpp  doctest_main.cpp  matrix_test.cpp  matrix_transformations_test.cpp  pattern_test.cpp  phong_illumination_test.cpp  plane_test.cpp  point_light_test.cpp  ray_test.cpp  ray_transform_test.cpp  sphere_test.cpp  tuple_test.cpp  world_test.cpp
tests/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  color_test.cpp  cone_test.cpp  csg_test.cpp  cube_test.cpp  cylinder_test.cpp  doctest_main.cpp  factorial_test.cpp  group_test.cpp  matrix_test.cpp  matrix_transformations_test.cpp  obj_file_parser_test.cpp  pattern_test.cpp  phong_illumination_test.cpp  plane_test.cpp  point_light_test.cpp  ray_test.cpp  ray_transform_test.cpp  reflection_refraction_test.cpp  sphere_test.cpp  sphere_transform_test.cpp  triangle_test.cpp  tuple_test.cpp  uv_pattern_test.cpp  world_test.cpp
